/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "tag.proto";

package opennms.inventory;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.inventory.dto";

message AzureActiveDiscoveryCreateDTO {
  string location_id = 1;
  string name = 2;
  string client_id = 3;
  string client_secret = 4;
  string subscription_id = 5;
  string directory_id = 6;
  repeated opennms.inventory.TagCreateDTO tags = 7;
}

message AzureActiveDiscoveryDTO {
  int64 id = 1;
  string location_id = 2;
  string name = 3;
  string tenant_id = 4;
  string client_id = 5;
  string subscription_id = 6;
  string directory_id = 7;
  int64 create_time_msec = 8;
}

service AzureActiveDiscoveryService {
  rpc createDiscovery(AzureActiveDiscoveryCreateDTO) returns (AzureActiveDiscoveryDTO) {};
}
